--- a/03-how-to-choose.Rmd
+++ b/03-how-to-choose.Rmd
@@ -15,9 +15,9 @@ knitr::include_graphics(here::here("img", "tmleesttotal.png"))
 
 ### Getting specific about the question
 
-To what extent does the indirect effect through mediators of adherence, pain,
-and depressive symptoms explain the differences in treatment effects on OUD
-relapse for homeless and nonhomeless individuals?
+To what extent does the indirect effect through mediators of adherence, pain, and
+depressive symptoms explain the differences in treatment effects on OUD relapse
+for homeless and nonhomeless individuals?
 
 What estimand do we want?
 
