--- a/latex_extras/preamble.tex
+++ b/latex_extras/preamble.tex
@@ -120,4 +120,5 @@
 \DeclareMathOperator*{\argmin}{\arg\!\min}
 \DeclarePairedDelimiterX{\norm}[1]{\lVert}{\rVert}{#1}
 
+% setting bookdown frontmatter option
 \frontmatter
